Add custom font

--- a/assets/css/common/_grid.scss
+++ b/assets/css/common/_grid.scss
@@ -1,33 +1,33 @@
 * {
   box-sizing: border-box;
 }
-body {
-  /* Rectangle: */
-  background-image: -webkit-linear-gradient(
-    44deg,
-    $brand-one 0%,
-    $brand-two 100%
-  );
-  background-image: -o-linear-gradient(44deg, $brand-one 0%, $brand-two 100%);
-  background-image: linear-gradient(134deg, $brand-one 0%, $brand-two 100%);
-  // background: $brand-one; /* fallback for old browsers */
-  // background: -webkit-linear-gradient(
-  //   -45deg,
-  //   $brand-one,
-  //   darken($brand-one, 10%),
-  //   darken($brand-one, 20%)
-  // ); /* Chrome 10-25, Safari 5.1-6 */
-  // background: linear-gradient(
-  //   -45deg,
-  //   $brand-one,
-  //   darken($brand-one, 10%),
-  //   darken($brand-one, 20%)
-  // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-}
+// body {
+//   /* Rectangle: */
+//   background-image: -webkit-linear-gradient(
+//     44deg,
+//     $brand-one 0%,
+//     $brand-two 100%
+//   );
+//   background-image: -o-linear-gradient(44deg, $brand-one 0%, $brand-two 100%);
+//   background-image: linear-gradient(134deg, $brand-one 0%, $brand-two 100%);
+//   // background: $brand-one; /* fallback for old browsers */
+//   // background: -webkit-linear-gradient(
+//   //   -45deg,
+//   //   $brand-one,
+//   //   darken($brand-one, 10%),
+//   //   darken($brand-one, 20%)
+//   // ); /* Chrome 10-25, Safari 5.1-6 */
+//   // background: linear-gradient(
+//   //   -45deg,
+//   //   $brand-one,
+//   //   darken($brand-one, 10%),
+//   //   darken($brand-one, 20%)
+//   // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+//   background-size: cover;
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   min-height: 100vh;
+// }
 footer,
 main {
   max-width: 1170px;
