--- a/assets/css/common/_variables.scss
+++ b/assets/css/common/_variables.scss
@@ -16,8 +16,8 @@ $brand-grey: #dbd8e6;
 $base-margin: 15px;
 $base-alpha: 0.6;
 
-$font-base: 'Roboto', sans-serif;
-$font-header: 'Roboto Condensed', sans-serif;
+$font-base: "Roboto", sans-serif;
+$font-header: "Anton", sans-serif;
 ///
 /// Viewport sized typography with minimum and maximum values
 ///
@@ -36,7 +36,7 @@ $font-header: 'Roboto Condensed', sans-serif;
 ///
 @mixin responsive-font($responsive, $min, $max: false, $fallback: false) {
   $responsive-unitless: $responsive / ($responsive - $responsive + 1);
-  $dimension: if(unit($responsive) == 'vh', 'height', 'width');
+  $dimension: if(unit($responsive) == "vh", "height", "width");
   $min-breakpoint: $min / $responsive-unitless * 100;
 
   @media (max-#{$dimension}: #{$min-breakpoint}) {
@@ -128,7 +128,7 @@ $grid-breakpoints: (
 //    >> breakpoint-infix(sm, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
 //    "-sm"
 @function breakpoint-infix($name, $breakpoints: $grid-breakpoints) {
-  @return if(breakpoint-min($name, $breakpoints) == null, '', '-#{$name}');
+  @return if(breakpoint-min($name, $breakpoints) == null, "", "-#{$name}");
 }
 
 // Media of at least the minimum breakpoint width. No query for the smallest breakpoint.
