--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:700');
+@import url("https://fonts.googleapis.com/css?family=Anton|Roboto:400,700");
 
-@import 'common/variables';
+@import "common/variables";
 
 // @import './node_modules/bootstrap/scss/bootstrap.scss';
 
-@import 'common/type';
-@import 'common/forms';
-@import 'common/grid';
-@import 'common/items';
+@import "common/type";
+@import "common/forms";
+@import "common/grid";
+@import "common/items";
