Fixed basic styling and colors

--- a/assets/css/common/_variables.scss
+++ b/assets/css/common/_variables.scss
@@ -3,11 +3,18 @@ $main-sm-columns: 12;
 $sidebar-sm-columns: 4;
 
 // Colors
-$brand-one: #8f57ea;
-// $brand-one-alpha: #8e2de2;
+$brand-one: #253020;
 $brand-two: #4a00e0;
 $brand-three: #8dd;
 $brand-four: #d16;
+$brand-five: #8dd;
+$brand-six: #8f57ea;
+$brand-seven: #8dd;
+$brand-eight: #4a00e0;
+$brand-nine: #8dd;
+$brand-ten: #d16;
+$brand-eleven: #4a00e0;
+$brand-twelfth: #d16;
 
 $brand-dark: #000;
 $brand-light: #fff;
