--- a/assets/css/common/_grid.scss
+++ b/assets/css/common/_grid.scss
@@ -1,33 +1,6 @@
 * {
   box-sizing: border-box;
 }
-// body {
-//   /* Rectangle: */
-//   background-image: -webkit-linear-gradient(
-//     44deg,
-//     $brand-one 0%,
-//     $brand-two 100%
-//   );
-//   background-image: -o-linear-gradient(44deg, $brand-one 0%, $brand-two 100%);
-//   background-image: linear-gradient(134deg, $brand-one 0%, $brand-two 100%);
-//   // background: $brand-one; /* fallback for old browsers */
-//   // background: -webkit-linear-gradient(
-//   //   -45deg,
-//   //   $brand-one,
-//   //   darken($brand-one, 10%),
-//   //   darken($brand-one, 20%)
-//   // ); /* Chrome 10-25, Safari 5.1-6 */
-//   // background: linear-gradient(
-//   //   -45deg,
-//   //   $brand-one,
-//   //   darken($brand-one, 10%),
-//   //   darken($brand-one, 20%)
-//   // ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-//   background-size: cover;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   min-height: 100vh;
-// }
 footer,
 main {
   max-width: 1170px;
@@ -52,5 +25,42 @@ main {
 footer {
   a {
     color: $brand-light;
+  }
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: #253020;
+
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+  0% {
+    -webkit-transform: perspective(120px);
+  }
+  50% {
+    -webkit-transform: perspective(120px) rotateY(180deg);
+  }
+  100% {
+    -webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg);
+  }
+}
+
+@keyframes sk-rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
   }
 }
