--- a/assets/css/common/_variables.scss
+++ b/assets/css/common/_variables.scss
@@ -3,18 +3,18 @@ $main-sm-columns: 12;
 $sidebar-sm-columns: 4;
 
 // Colors
-$brand-one: #253020;
-$brand-two: #4a00e0;
-$brand-three: #8dd;
-$brand-four: #d16;
-$brand-five: #8dd;
-$brand-six: #8f57ea;
-$brand-seven: #8dd;
-$brand-eight: #4a00e0;
-$brand-nine: #8dd;
-$brand-ten: #d16;
-$brand-eleven: #4a00e0;
-$brand-twelfth: #d16;
+$brand-one: #96bfe6;
+$brand-two: #d52442;
+$brand-three: #f5f5b8;
+$brand-four: #172713;
+$brand-five: #b08699;
+$brand-six: #96bfe6;
+$brand-seven: #d52442;
+$brand-eight: #f5f5b8;
+$brand-nine: #172713;
+$brand-ten: #b08699;
+$brand-eleven: #172713;
+$brand-twelfth: #b08699;
 
 $brand-dark: #000;
 $brand-light: #fff;
