--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -7,6 +7,8 @@
     height: 100%;
     width: 100%;
     background-color: $brand-one;
+    padding: 0 0 0 $base-margin;
+
     .background {
       max-width: 900px;
       height: 100vh;
@@ -22,6 +24,7 @@
         position: relative;
         z-index: 100;
         text-shadow: 2px 2px 5px rgba($brand-dark, $base-alpha);
+        padding: $base-margin;
         @include media-breakpoint-up(md) {
           // margin-left: 75px;
           padding: $base-margin * 8;
@@ -32,11 +35,14 @@
   img {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     max-width: 400px;
     display: block;
-    transform: translateX(-50%) translateY(0);
+    transform: translateX(35%) translateY(-50%);
     // z-index: -1;
+    @include media-breakpoint-up(md) {
+      transform: translateX(50%) translateY(0);
+    }
   }
 }
 .btn {
