--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -7,11 +7,11 @@
     height: 100%;
     width: 100%;
     background-color: $brand-one;
-    padding: 0 0 0 $base-margin;
+    // padding: 0 0 0 $base-margin;
     overflow: hidden;
 
     .background {
-      max-width: 900px;
+      max-width: 1000px;
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -30,22 +30,25 @@
           // margin-left: 75px;
           padding: $base-margin * 8;
         }
+        img {
+          max-width: 100%;
+        }
       }
     }
   }
-  img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    max-width: 200px;
-    display: block;
-    transform: translateX(25%) translateY(-25%);
-    // z-index: -1;
-    @include media-breakpoint-up(md) {
-      max-width: 400px;
-      transform: translateX(50%) translateY(0);
-    }
-  }
+  // img {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   max-width: 200px;
+  //   display: block;
+  //   transform: translateX(25%) translateY(-25%);
+  //   // z-index: -1;
+  //   @include media-breakpoint-up(md) {
+  //     max-width: 400px;
+  //     transform: translateX(50%) translateY(0);
+  //   }
+  // }
 }
 .btn {
   background-color: #fff;
