--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -7,11 +7,13 @@
     height: 100%;
     width: 100%;
     background-color: $brand-one;
+
     // padding: 0 0 0 $base-margin;
     overflow: hidden;
 
     .background {
-      max-width: 1000px;
+      width: 1000px;
+      max-width: 100%;
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -20,7 +22,9 @@
     }
     .inner {
       position: relative;
-
+      @include media-breakpoint-up(md) {
+        margin-right: $base-margin * 6;
+      }
       .content {
         position: relative;
         z-index: 100;
@@ -30,25 +34,32 @@
           // margin-left: 75px;
           padding: $base-margin * 8;
         }
-        img {
-          max-width: 100%;
-        }
+        // img {
+        //   max-width: 100%;
+        //   width: 200px;
+        //   float: right;
+        // }
       }
     }
   }
-  // img {
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   max-width: 200px;
-  //   display: block;
-  //   transform: translateX(25%) translateY(-25%);
-  //   // z-index: -1;
-  //   @include media-breakpoint-up(md) {
-  //     max-width: 400px;
-  //     transform: translateX(50%) translateY(0);
-  //   }
-  // }
+  @include media-breakpoint-down(md) {
+    img {
+      max-width: 100%;
+      width: 150px;
+      // float: right;
+      padding: $base-margin;
+    }
+  }
+  @include media-breakpoint-up(md) {
+    img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: block;
+      max-width: 350px;
+      transform: translateX(70%) translateY(0);
+    }
+  }
 }
 .btn {
   background-color: #fff;
