--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -49,7 +49,9 @@
     padding: $base-margin;
   }
   @include media-breakpoint-up(md) {
-    width: 350px;
+    img {
+      width: 350px;
+    }
   }
   @media (max-width: 330px) {
     img {
