--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: #f5f5b8;
     height: 100%;
     width: 100%;
     background-color: $brand-one;
@@ -12,7 +12,7 @@
     overflow: hidden;
 
     .background {
-      width: 1000px;
+      width: 1400px;
       max-width: 100%;
       height: 100vh;
       display: flex;
